<resources>

    <string name="placeholder">placeholder</string>
    <string name="app_name">DiceRoller</string>
    <string name="statistics_title">Statistics</string>
    <string name="central_title">Central</string>
    <string name="chooser_title">Chooser</string>
    <string name="roll">Roll!</string>
    <string name="edit">Edit</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Dice Roller</string>
    <string name="empty_selection">No Dice!</string>
    <string name="last_roll">Last Roll</string>
    <string name="all_rolls">All Rolls</string>
    <string name="no_statistics">No Statistics</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="title_creator">Set Creator</string>
    <string name="setname_hint">set name</string>
    <string name="label_modifier">Modifier:</string>
    <string name="add_dice_dialog_title">How many faces?</string>
    <string name="add_dice_ok">Ok</string>
    <string name="add_dice_cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="title_editor">Set Editor</string>
    <string name="num_rolls_label">Rolls:</string>
    <string name="avg_rolls_label">AVG:</string>
    <string name="per_dice_count">Number Rolled</string>
    <string name="per_dice_avg">Average</string>
    <string name="per_dice_face">Faces</string>
    <string name="rolls">History</string>
    <string name="stats">Statistics</string>

</resources>
