<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dip" >

        <ToggleButton
            android:id="@+id/chooser_button"
            android:layout_height="wrap_content"
            android:layout_width="0px"
            android:layout_weight="1"
            android:textOff="@string/chooser_title"
            android:textOn="@string/chooser_title" />

        <ToggleButton
            android:id="@+id/central_button"
            android:layout_height="wrap_content"
            android:layout_width="0px"
            android:layout_weight="1"
            android:textOff="@string/central_title"
            android:textOn="@string/central_title" />

        <ToggleButton
            android:id="@+id/statistics_button"
            android:layout_height="wrap_content"
            android:layout_width="0px"
            android:layout_weight="1"
            android:textOff="@string/statistics_title"
            android:textOn="@string/statistics_title" />

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/pager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity" />

</LinearLayout>
